# SEP4

./: ER(NotFinished).asta  PowerBIFinal.pbix  Project Report SEP4 XYZ.docx  SEP4 Project Report XYZ.docx  YoutubeVideo.txt
Data/: ForProject DB.sql  (+2 more)
IOT/IMS1/IMS1/: CMakeLists.txt  IMS1.componentinfo.xml  IMS1.cproj  main.c
IOT/IMS1/IMS1/DataStructures/: sensor_sample.h
IOT/IMS1/IMS1/Debug/: IMS1.elf  IMS1.hex  IMS1.lss  IMS1.map  IMS1.srec  Makefile  main.d  makedep.mk
IOT/IMS1/IMS1/Debug/co2_task/: co2_task_impl.d
IOT/IMS1/IMS1/Debug/hum_task/: hum_task_impl.d
IOT/IMS1/IMS1/co2_task/: co2_task.h  co2_task_impl.c
IOT/IMS1/IMS1/exportToHTML/: co2_task.h.html  co2_task_impl.c.html  index.html
IOT/IMS1/IMS1/html/: files.html  files_dup.js  globals.html  globals_func.html  globals_vars.html  main_8c.html  main_8c.js  main_8c__incl.dot  main_8c__incl.md5  menudata.js  navtreedata.js  navtreeindex0.js  stdio__driver_8h.html  stdio__driver_8h.js  stdio__driver_8h__dep__incl.dot  stdio__driver_8h__dep__incl.md5  stdio__driver_8h__incl.dot  stdio__driver_8h__incl.md5  stdio__driver_8h_source.html
IOT/IMS1/IMS1/hum_task/: hum_task.h  hum_task_impl.c
IOT/IMS1/IMS1/init_task/: init_hw.c  init_hw.h
IOT/IMS1/IMS1/latex/: files.tex  main_8c.tex  main_8c.tex.tmp  main_8c__incl.dot  main_8c__incl.md5  refman.tex  stdio__driver_8h.tex  stdio__driver_8h__dep__incl.dot  stdio__driver_8h__dep__incl.md5  stdio__driver_8h__incl.dot  stdio__driver_8h__incl.md5
IOT/IMS1/IMS1/lora_task/: lora_task.h  lora_task_impl.c
IOT/IMS1/IMS1/temp_task/: temp_task.h  temp_task_impl.c
(+311 files in other folders)
